<resources>
    <string name="app_name">iTV</string>
    <string name="topmost_no_signal">Interrupt Signal</string>
    <string name="topmost_program_empty">The program list is empty. Please search</string>
    <string name="scan_tp_tv">TV: </string>
    <string name="audio">Audio</string>
    <string name="audio_track">Audio Track</string>
    <string name="audio_language">Audio Language</string>
    <string name="audio_track_stereo">Stereo</string>
    <string name="audio_track_left_simple">Left</string>
    <string name="audio_track_right_simple">Right</string>
    <string name="epg_event_playing">Playing</string>
    <string name="dialog_favorite_title">Favorite Type</string>
    <string name="Installation">Installation</string>
    <string name="menu">BACK</string>
    <string name="back">Back</string>
    <string name="up_down">PageUp/Down</string>
    <string name="auto_diseqc">Auto DiSEqC</string>
    <string name="auto">Auto</string>
    <string name="tp">TP</string>
    <string name="scan_tp_title">Scanning TPs</string>
    <string name="tp1">TP:</string>
    <string name="edit">Edit</string>
    <string name="scan">Scan</string>
    <string name="find">Find</string>
    <string name="search_01">Search</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="motor">Motor:</string>
    <string name="diseqc">DiSEqC:</string>
    <string name="freq">Freq:</string>
    <string name="lnb_power">LNB Power:</string>
    <string name="lnb">LNB:</string>
    <string name="all">ALL</string>
    <string name="longitude">Longitude:</string>
    <string name="i">I</string>
    <string name="q">Q</string>
    <string name="rename">Rename</string>
    <string name="lock">Lock</string>
    <string name="lock_error">Lock error!</string>
    <string name="unlock">unLock</string>
    <string name="skip">Skip</string>
    <string name="pid">PID</string>
    <string name="single_satellite_search">Single Satellite Search</string>
    <string name="multi_satellite_search">MultiSatellite Search</string>
    <string name="audio_language_type_private">PRIVATE</string>
    <string name="audio_language_type_mpeg1">MPEG1</string>
    <string name="audio_language_type_mpeg2">MPEG2</string>
    <string name="audio_language_type_aac">AAC</string>
    <string name="audio_language_type_ac3">AC3</string>
    <string name="audio_language_type_ac3_plus">AC3+</string>
    <string name="audio_language_type_dts">DTS</string>
    <string name="audio_language_type_lpcm">LPCM</string>
    <string name="audio_language_type_wm9">WM9</string>
    <string name="audio_language_type_mheg">MHEG</string>
    <string name="audio_language_type_dsm_cc">DSM CC</string>
    <string name="audio_language_type_h2221">TYPE H2221</string>
    <string name="audio_language_type_a">TYPE A</string>
    <string name="audio_language_type_b">TYPE B</string>
    <string name="audio_language_type_c">TYPE C</string>
    <string name="audio_language_type_d">TYPE D</string>
    <string name="audio_language_type_aux">TYPE AUX</string>
    <string name="audio_language_type_unknown">Unknown</string>
    <string name="motor_01">Motor</string>
    <string name="motor_satellite">Satellite</string>
    <string name="motor_Insat_2e">Insat 2e</string>
    <string name="motor_type">Motor Type</string>
    <string name="motor_diseqc">DiSEqC1.2</string>
    <string name="motor_move_steps">Move Steps</string>
    <string name="motor_stop">Stop</string>
    <string name="motor_step_size">Step Size</string>
    <string name="motor_sat_longitudu">Sat Longitude</string>
    <string name="motor_local_longitudu">Local Longitude</string>
    <string name="motor_local_latitude">Local Latitude</string>
    <string name="motor_continue">Continue</string>
    <string name="motor_position">Position</string>
    <string name="motor_position_text">Position: {0}</string>
    <string name="motor_diseqc_command">DiSEqC Command</string>
    <string name="motor_save_position">Save Position</string>
    <string name="motor_change_item">Change Item</string>
    <string name="motor_select">Select</string>
    <string name="motor_ok">OK</string>
    <string name="south">S</string>
    <string name="west">W</string>
    <string name="general_setting">General Settings</string>
    <string name="t2_setting">T/T2 Settings</string>
    <string name="subtitles_setting">Subtitle Display</string>
    <string name="timeout">P/F Bar Timeout</string>
    <string name="ratio_mode">Ratio Mode</string>
    <string name="aspect_mode">Aspect Mode</string>
    <string name="switch_channel_mode">Switch Channel Mode</string>
    <string name="first_audio_language">First Audio Language</string>
    <string name="second_audio_language">Second Audio Language</string>
    <string name="language">English</string>
    <string name="teletext_language">Teletext Language</string>
    <string name="subtitle_language">Subtitle Language</string>
    <string name="switch_channel_block">Black</string>
    <string name="scart">SCART</string>
    <string name="scart_mode_rgb">RGB</string>
    <string name="scart_mode_cvbs">CVBS</string>
    <string name="auto_start">Auto Start</string>
    <string name="channel_scan">Channel Scan</string>
    <string name="channel_scan_time">Channel Scan Time</string>
    <string name="subtitle">Subtitle</string>
    <string name="teletext">Teletext</string>
    <string name="tv">TV</string>
    <string name="radio">Radio</string>
    <string name="add">Add</string>
    <string name="tp_listing">TP List</string>
    <string name="delete">Delete</string>
    <string name="channel_edit">Channel Edit</string>
    <string name="channel_list_fav">Channel Favorite List</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="manual_installation">Manual Installation</string>
    <string name="blind_scan">Blind Scan</string>
    <string name="epg">EPG</string>
    <string name="clear_channel">Clear Channel</string>
    <string name="restore_channel">Restore User Data</string>
    <string name="backup_channel">Backup User Data</string>
    <string name="data_reset">Data Reset</string>
    <string name="Channel_management">Channel Management</string>
    <string name="dtv_setting">DTV Setting</string>
    <string name="blindscan_select">BlindScan Select</string>
    <string name="satellite_blind">Satellite:</string>
    <string name="diseqc_1_x">DiSEqC 1.X:</string>
    <string name="freq_22KHz">22KHz:</string>
    <string name="progress">Progress</string>
    <string name="new_tv">New Tv :</string>
    <string name="_radio">Radio :</string>
    <string name="switch_frame">Switch Frame</string>
    <string name="new_tp">New Tp :</string>
    <string name="porgress">Progress</string>
    <string name="change_item">Change Item</string>
    <string name="all_channel">All Channel</string>
    <string name="favorite_group_list">Favorite Group</string>
    <string name="favorite_channel_list">Favorite Channel</string>
    <string name="channel_num">NO.</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_del">Del</string>
    <string name="channel_move">Move</string>
    <string name="channel_fav">Fav</string>
    <string name="channel_lock">Lock</string>
    <string name="channel_skip">Skip</string>
    <string name="channel_sort">Sort</string>
    <string name="channel_more">More</string>
    <string name="symbol_rate">Symbol Rate</string>
    <string name="pol">Pol</string>
    <string name="h">H</string>
    <string name="v">V</string>
    <string name="add_failure">the Freq or Symbol is too much</string>
    <string name="ok">OK</string>
    <string name="scan_mode">Scan Mode</string>
    <string name="cas_system">CAS System</string>
    <string name="allca">ALLCA</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_selected_transponder">Delete selected transponder?</string>
    <string name="capital_yes">YES</string>
    <string name="capital_no">NO</string>
    <string name="no_program">No program!\nDo you want to enter the search interface?</string>
    <string name="_freq">Freq</string>
    <string name="edit_rename">Rename</string>
    <string name="edit_satellite_name">Satellite Name</string>
    <string name="edit_favorite_group_name">Group Name</string>
    <string name="seek_time_tip">Input the seek time:</string>
    <string name="input_invalid">Input is invalid!</string>
    <string name="channel_scan_time_tip">Input the channel scan time:</string>
    <string name="back_infomation">If you exit, the data will not save.</string>
    <string name="network">Network</string>
    <string name="nit_off">NIT OFF</string>
    <string name="nit_on">NIT ON</string>
    <string name="freeca">FREECA</string>
    <string name="onlyca">ONLYCA</string>
    <string name="ftaonly">FTA Only</string>
    <string name="mhz">MHz</string>
    <string name="ks">ks</string>
    <string name="select">Select</string>
    <string name="are_you_sure_clear_prog_data">Do you really want to Clear Channels?</string>
    <string name="factory_reset_content">Do you want to reset all data and setting?</string>
    <string name="sub">SUB</string>
    <string name="txt">TXT</string>
    <string name="rate">RATE</string>
    <string name="no_information">Information not available</string>
    <string name="dialog_pf_detail_title">Service Information</string>
    <string name="dialog_pf_no_detail">No detail information!</string>
    <string name="dialog_pf_satellite_name">Satellite Name:{0}</string>
    <string name="dialog_pf_channel_name">Channel Name:{0}</string>
    <string name="dialog_pf_vpid">VPID:{0}</string>
    <string name="dialog_pf_apid">APID:{0}</string>
    <string name="dialog_pf_ppid">PPID:{0}</string>
    <string name="dialog_pf_freq">Frequency:{0}</string>
    <string name="dialog_pf_symbol">Symbolrate:{0}</string>
    <string name="dialog_pf_pol">Polarization:{0}</string>
    <string name="video_type">Video Type</string>
    <string name="audio_type">Audio Type</string>
    <string name="video_pid">Video PID</string>
    <string name="audio_pid">Audio PID</string>
    <string name="pcr_pid">PCR PID</string>
    <string name="h264">H264</string>
    <string name="mpeg2">MPEG2</string>
    <string name="password">Enter Password</string>
    <string name="password_input">Please Input Password:</string>
    <string name="time">Enter Time</string>
    <string name="time_input">Please Input Time(minute):</string>
    <string name="dialog_exit_pvr_tips">Tips</string>
    <string name="dialog_exit_timeshift_content">Program is timeshifting, do you want to stop it?</string>
    <string name="dialog_exit_playback_content">Program is playback, do you want to stop it?</string>
    <string name="please_search">No programs, please search</string>
    <string name="preference_settings">Preference Settings</string>
    <string name="parental_control">Parental Control</string>
    <string name="menu_lock">Menu Lock</string>
    <string name="channel_lock2">Channel Lock</string>
    <string name="control_age">Control Age</string>
    <string name="set_password">Set Password</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="pvr_settings">PVR Settings</string>
    <string name="book_list">Book List</string>
    <string name="book_type">Type</string>
    <string name="book_mode">Mode</string>
    <string name="book_date">Date</string>
    <string name="book_time">Time</string>
    <string name="record_list">Record List</string>
</resources>