<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/dialog_pf_detail_title"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#c0bfbf"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_pf_detail_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/dialog_pf_no_detail"
        android:textSize="16sp"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#c0bfbf" />

    <TextView
        android:id="@+id/tv_pf_detail_satellite_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/dialog_pf_satellite_name" />

    <TextView
        android:id="@+id/tv_pf_detail_channel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/dialog_pf_channel_name"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_pf_detail_vpid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/dialog_pf_vpid"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pf_detail_apid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/dialog_pf_apid"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pf_detail_ppid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/dialog_pf_ppid"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_pf_detail_freq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/dialog_pf_freq"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pf_detail_symbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/dialog_pf_symbol"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pf_detail_pol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/dialog_pf_pol"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>