<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@mipmap/right_bottom_background"
    android:gravity="center_vertical|center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_bottom_bar_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:drawableStart="@drawable/tag_red_bg"
        android:drawableLeft="@drawable/tag_red_bg"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/scan"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_bottom_bar_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:drawableStart="@drawable/tag_green_bg"
        android:drawableLeft="@drawable/tag_green_bg"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/edit"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_bottom_bar_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:drawableStart="@drawable/tag_yellow_bg"
        android:drawableLeft="@drawable/tag_yellow_bg"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/tp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_bottom_bar_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:drawableStart="@drawable/tag_blue_bg"
        android:drawableLeft="@drawable/tag_blue_bg"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/auto_diseqc"
        android:textSize="15sp" />

    <!--PageUp/Down-->
    <LinearLayout
        android:layout_width="42dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/white_kuang"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:src="@drawable/triangle_up"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/triangle_down"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/up_down"
        android:textSize="15sp" />

    <!--Back-->
    <TextView
        android:layout_width="42dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/white_kuang"
        android:gravity="center"
        android:text="@string/menu"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/back"
        android:textSize="15sp" />
</LinearLayout>