<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_menu"
    android:layout_width="235dp"
    android:layout_height="match_parent"
    android:background="@mipmap/main_menu_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@mipmap/logo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_installation"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/Installation" />

        <TextView
            android:id="@+id/item_epg"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/epg" />

        <TextView
            android:id="@+id/title_channel_manage"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/Channel_management"
            style="@style/TitleStyle"
            android:visibility="gone" />

        <View
            android:id="@+id/channel_manage_title_divider"
            style="@style/TitleDividerStyle"
            android:layout_below="@id/title_channel_manage"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/item_channel_edit"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/channel_edit"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_channel_favorite"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/channel_list_fav"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_clear_channel"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/clear_channel"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_restore_user_data"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/restore_channel"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_backup_user_data"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/backup_channel"
            android:textSize="15sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/item_channel_manage"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="40dp">

            <ImageView
                android:id="@+id/iv_channel_manage_back"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:src="@mipmap/back"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_channel_manage"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/dvb_btn_selector"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/Channel_management"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_dtv_setting"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/dtv_setting"
            style="@style/TitleStyle"
            android:visibility="gone" />

        <View
            android:id="@+id/dtv_setting_title_divider"
            style="@style/TitleDividerStyle"
            android:layout_below="@id/title_dtv_setting"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/item_general_settings"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/general_setting"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_t2_settings"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/t2_setting"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_parental_control"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/parental_control"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_pvr_settings"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/pvr_settings"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_book_list"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/book_list"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_record_list"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/record_list"
            android:textSize="15sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/item_dtv_setting"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="40dp">

            <ImageView
                android:id="@+id/iv_dtv_setting_back"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:src="@mipmap/back"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_dtv_setting"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/dvb_btn_selector"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/dtv_setting"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_data_reset"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dvb_btn_selector"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/data_reset"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>